Rendered ortho view messes up Freestyle lines in 3D viewport #36009

Closed
opened 2013-07-04 18:23:24 +02:00 by Shinsuke Irie · 5 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 amd64
GeForce GTX670

- Blender version with error, and version that worked ---

Tested 2.68RC and r57994

- Short description of error ---

When using rendered ortho view in the 3D viewport with BI render, Freestyle lines are incorrectly displayed ignoring the lineset settings.
See screenshots (freestyle_rendered_preview_ortho.png and freestyle_rendered_preview_persp.png).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Attached .blend file (rendered_view_freestyle_bug.blend).
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 amd64 GeForce GTX670 - Blender version with error, and version that worked --- Tested 2.68RC and r57994 - Short description of error --- When using rendered ortho view in the 3D viewport with BI render, Freestyle lines are incorrectly displayed ignoring the lineset settings. See screenshots (freestyle_rendered_preview_ortho.png and freestyle_rendered_preview_persp.png). - Steps for others to reproduce the error (preferably based on attached .blend file) --- Attached .blend file (rendered_view_freestyle_bug.blend). %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed, I'm guessing this is related to the somewhat strange clip start/end values in this case. Rather than e.g. 0.001 to 1000.0 as you would usually get, orthographic viewports would use -500.0 to 500.0. Perhaps freestyle doesn't handle such negative clip start well, at least it looks like the object is being clipped at the center.%%%

%%%Confirmed, I'm guessing this is related to the somewhat strange clip start/end values in this case. Rather than e.g. 0.001 to 1000.0 as you would usually get, orthographic viewports would use -500.0 to 500.0. Perhaps freestyle doesn't handle such negative clip start well, at least it looks like the object is being clipped at the center.%%%

%%%The reported problem was also confirmed on my side.

Freestyle assumes that imported mesh data are in the camera coordinate system to simplify the mesh import operation. In addition, the mesh importer uses clip start/end to clip all vertices behind the camera (this clipping is a Freestyle-specific requirement to make it possible to convert a 2D point back to the 3D camera coordinate system during the view map calculation). The reported problem seems related to these implementation-specific details. Indeed Freestyle was never tested with a negative clip start.

I look into the issue asap.%%%

%%%The reported problem was also confirmed on my side. Freestyle assumes that imported mesh data are in the camera coordinate system to simplify the mesh import operation. In addition, the mesh importer uses clip start/end to clip all vertices behind the camera (this clipping is a Freestyle-specific requirement to make it possible to convert a 2D point back to the 3D camera coordinate system during the view map calculation). The reported problem seems related to these implementation-specific details. Indeed Freestyle was never tested with a negative clip start. I look into the issue asap.%%%

%%%Fix committed in the trunk revision 58129. The issue is closed now. Thanks a lot for the problem report.%%%

%%%Fix committed in the trunk revision 58129. The issue is closed now. Thanks a lot for the problem report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36009
No description provided.